# fraud-detection-pipeline

./: .coverage  .gitlab-ci.yml  Dockerfile  Dockerfile.airflow  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dags/: fraud_detection_dag.py
docs/: DATA_LINEAGE.md  MODEL_CARD.md
results/validation/: validation_pipeline_run.json
sql/: 001_schema.sql  002_seed.sql
src/fraud_detection/: __init__.py  cli.py
src/fraud_detection/data/: __init__.py  ieee_cis.py  synthetic.py
src/fraud_detection/features/: __init__.py  engineering.py
src/fraud_detection/models/: __init__.py  autoencoder.py  ensemble.py  isolation_forest.py  rules.py
src/fraud_detection/monitoring/: __init__.py  audit.py  drift.py
src/fraud_detection/pipeline/: __init__.py
src/fraud_detection/utils/: __init__.py  config.py  database.py  logging.py
src/fraud_detection/validation/: __init__.py  expectations.py
src/fraud_detection_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: test_features.py  test_models.py  test_synthetic.py
