[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection-pipeline"
version = "1.0.0"
description = "Production-grade transaction anomaly and fraud detection pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Fraud Detection Team", email = "team@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["fraud-detection", "anomaly-detection", "machine-learning", "airflow"]

dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "apache-airflow>=2.7.0",
    "great-expectations>=0.18.0",
    "evidently>=0.4.0",
    "shap>=0.44.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer>=0.9.0",
    "tqdm>=4.66.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pandas-stubs>=2.0.0",
    "types-psycopg2>=2.9.0",
]
kaggle = [
    "kaggle>=1.5.0",
]

[project.scripts]
fraud-cli = "fraud_detection.cli:app"

[project.urls]
Homepage = "https://github.com/example/fraud-detection-pipeline"
Repository = "https://github.com/example/fraud-detection-pipeline"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fraud_detection = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "PL", "RUF"]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
    "B006",     # Mutable default argument (OK for documented defaults)
    "B008",     # Function call in default argument (OK for typer/fastapi)
    "B904",     # Raise from in except (minor style issue)
    "B905",     # zip strict (Python 3.10+ style)
    "PLC0415",  # Import not at top level (OK for lazy imports)
    "ARG001",   # Unused function argument (OK for interface compliance)
    "ARG002",   # Unused method argument
    "SIM108",   # Ternary operator
    "RUF012",   # Mutable class attribute defaults (OK for constants)
    "E501",     # Line too long (handled by formatter where possible)
]

[tool.ruff.lint.isort]
known-first-party = ["fraud_detection"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sklearn.*", "shap.*", "evidently.*", "great_expectations.*", "airflow.*", "torch.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src/fraud_detection --cov-report=term-missing"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/fraud_detection"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
# Lower threshold - some modules require optional deps (PyTorch, Evidently) not in test env
fail_under = 40
